--- a/IonPropeller/IonPropeller.csproj
+++ b/IonPropeller/IonPropeller.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="34.0.1"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0"/>
     </ItemGroup>
 
 </Project>
