--- a/.github/workflows/generate-swagger.yml
+++ b/.github/workflows/generate-swagger.yml
@@ -24,8 +24,8 @@ jobs:
       run: dotnet build --no-restore -c Debug
     - name: Generate Swagger
       run: dotnet swagger tofile --output swagger.json IonPropeller/bin/Debug/net6.0/IonPropeller.dll v1
-    - name: Download artifact
-      uses: actions/download-artifact@v3.0.0
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3.0.0
       with:
         name: swagger.json
-        path: swagger.json
+        path: ${{ github.workspace }}/swagger.json
