--- a/IonPropeller/IonPropeller.csproj
+++ b/IonPropeller/IonPropeller.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Bogus" Version="34.0.1"/>
+        <PackageReference Include="GeoJSON.Text" Version="1.0.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0"/>
     </ItemGroup>
